# tuat-feed-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: audit.yml  check_build_test.yml  check_test.yml  coverage.yml  rust.yml
client/tuat-feed/: Cargo.toml
client/tuat-feed/examples/: fetch.rs
client/tuat-feed/tests/: fetch.rs
common/common/: Cargo.toml
common/common/src/: lib.rs
common/tuat-feed-common/: Cargo.toml
nix/: docker.nix  module.nix  package.nix
server/feed-scraper/: Cargo.toml
server/feed-scraper/src/: get.rs  lib.rs  post.rs
server/feed-scraper/src/feed_scraper/: error.rs  info_parser.rs  main_page_parser.rs  mod.rs
server/server/: Cargo.toml
server/server/src/: handlers_v1.rs  handlers_v2.rs  info_bundle.rs  lib.rs  main.rs  state.rs
server/tuat-feed-scraper/: Cargo.toml
server/tuat-feed-scraper/src/: lib.rs
server/tuat-feed-scraper/src/parser/: info_parser.rs  main_page_parser.rs
server/tuat-feed-scraper/test_assets/: test_academic_feed.html
server/tuat-feed-server/: Cargo.toml
server/tuat-feed-server/src/: handlers.rs  handlers_v2.rs  info_bundle.rs  main.rs  state.rs
src/: handler.rs  handlers.rs  info_section.rs  lib.rs  main.rs  state.rs  v1.rs
src/handlers/: mod.rs  v1.rs  v2.rs
tests/: json_formatting.rs
tuat-feed-parser/: Cargo.toml
tuat-feed-parser/src/: get.rs  info.rs  lib.rs  parser.rs
tuat-feed-parser/src/parser/: info_parser.rs  main_page_parser.rs  mod.rs
tuat-feed-parser/test_assets/: test_info.html
