[package]
name = "tuat-feed-api"
version = "0.2.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
include = ["src/main.rs", "LICENSE", "README.md"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["tuat-feed-parser"]

[features]
default = ["cache"]
cache = []

[dependencies]
tuat-feed-parser = { path = "tuat-feed-parser" }
tokio = { version = "1.0.1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.118", features = ["derive"] }
anyhow = "1.0.35"
warp = "0.3"
env_logger = "0.8.2"
log = "0.4.11"
structopt = "0.3.21"
