[package]
name = "tuat-feed-api"
version = "0.2.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
include = ["src/main.rs", "LICENSE", "README.md"]
license = "MPL-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["tuat-feed-parser"]

[features]
default = ["cache"]
cache = []

[dependencies]
tuat-feed-parser = { path = "tuat-feed-parser" }
tokio = { version = "1.8.1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.42"
warp = "0.3.1"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.22"
