[package]
name = "tuat-feed-api"
version = "0.2.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"
include = ["src/main.rs", "LICENSE", "README.md"]
license = "MPL-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["tuat-feed-parser"]

[features]
default = ["cache"]
cache = []

[dependencies]
tuat-feed-parser = { path = "tuat-feed-parser" }
log = "0.4.14"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
anyhow = "1.0.44"
