[package]
name = "tuat-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
tokio = { version = "1.18.5", features = ["full"] }
tuat-feed-common = { path = "../../common/common" }