[package]
name = "tuat-feed-scraper"
version = "0.2.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
exclude = ["**/*.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tuat-feed-common = { path = "../../common/common" }
scraper = "0.13.0"
reqwest = "0.11.11"
thiserror = "1.0.31"
tokio = "1.19.2"
tracing = "0.1.35"

# serde_derive = "1.0.138"
[dev-dependencies]
serde_json = "1.0.82"
