[package]
name = "tuat-feed-server"
version = "0.4.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2021"
include = ["src/main.rs", "LICENSE", "README.md"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tuat-feed-scraper = { path = "../feed-scraper" }
tuat-feed-common = { path = "../../common/common" }
log = "0.4.14"
actix-web = "4.0.0-beta.13"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.18.5", features = ["full"] }
env_logger = "0.9.0"
actix-rt = "2.5.0"
