[package]
name = "tuat-feed-server"
version = "0.4.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2021"
include = ["src/main.rs", "LICENSE", "README.md"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tuat-feed-scraper = { path = "../feed-scraper" }
tuat-feed-common = { path = "../../common/common" }
serde = "1.0.138"
serde_derive = "1.0.138"
tokio = { version = "1.19.2", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.35"
axum = { version = "0.6.5", features = ["http2", "query"] }
tower = "0.4.13"
serde_json = "1.0.87"
hyper = { version = "0.14.20", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
