[package]
name = "tuat-feed-scraper"
version = "0.2.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
exclude = ["**/*.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tuat-feed-common = { path = "../../common/tuat-feed-common" }
scraper = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = "0.11.6"
thiserror = "1.0.30"
log = "0.4.14"
tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.74"

